--- a/examples/yewtify-example/Cargo.toml
+++ b/examples/yewtify-example/Cargo.toml
@@ -11,5 +11,5 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2.60"
 wasm-logger = "0.2.0"
 web-sys = "0.3.37"
-yew = "0.15.0"
+yew = { git = "https://github.com/yewstack/yew.git", branch = "push-if" }
 yewtify = { path = "../.." }
